If applied, this changes title to sentence case and formate date to not include leading `0` - as per review comments

--- a/views/cases/_new-client-details-partial.njk
+++ b/views/cases/_new-client-details-partial.njk
@@ -4,7 +4,7 @@
 }) }}
 
 <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Date received: <span class="govuk-body-l">{{ client.dateReceived | formatDate }}</span></h2>
-<h2 class="govuk-heading-m govuk-!-margin-bottom-7">LAA Reference: <span class="govuk-body-l">{{ client.laaReference or "Not provided"}}</span></h2>
+<h2 class="govuk-heading-m govuk-!-margin-bottom-7">LAA reference: <span class="govuk-body-l">{{ client.laaReference or "Not provided"}}</span></h2>
 
 <div class="govuk-button-group">
   {{ govukButton({
