--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -15,9 +15,9 @@
       columns: [
         { key: "fullName", text: "Name", link: "new/{{caseReference}}/client-details" },
         { key: "caseReference", text: "Case ID" },
-				{ key: "dateOfBirth", text: "Date of Birth" },
+				{ key: "dateOfBirth", text: "Date of birth" },
         { key: "refCode", text: "Details" },
-        { key: "dateReceived", text: "Date Received", sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
+        { key: "dateReceived", text: "Date received", sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
       ],
       sortBy: "dateReceived",
       sortOrder: sortOrder or "asc",
