--- a/views/base.njk
+++ b/views/base.njk
@@ -34,7 +34,7 @@
     navigation: {
       label: "Account navigation",
       items: [{
-        text: "ramona.zoro@law.com",
+        text: "roronoa.zoro@law.com",
         attributes: {
           'style': 'pointer-events: none;'
         }
@@ -68,6 +68,7 @@
     },
     html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>.'
   }) }}
+  {% block backLink %}{% endblock %}
 {% endblock %}
 
 {% block content %}
