--- a/views/cases/_opened-partial.njk
+++ b/views/cases/_opened-partial.njk
@@ -13,11 +13,11 @@
       id: "opened-cases-table",
       data: casesData,
       columns: [
-        { key: "fullName", text: "Name", link: "#" },
+        { key: "fullName", text: "Name", link: "opened/{{caseReference}}/client-details" },
         { key: "caseReference", text: "Case ID" },
-				{ key: "dateOfBirth", text: "Date of Birth" },
+				{ key: "dateOfBirth", text: "Date of birth" },
         { key: "refCode", text: "Details" },
-        { key: "lastModified", text: "Date Modified", sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
+        { key: "lastModified", text: "Date modified", sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
       ],
       sortBy: "lastModified",
       sortOrder: sortOrder or "asc",
