Revert "Fixes sorting in other pages"
This reverts commit 60d4a4736b70d65308cf347bce63463ecb53d24d.

--- a/views/cases/_accepted-partial.njk
+++ b/views/cases/_accepted-partial.njk
@@ -21,8 +21,7 @@
       ],
       sortBy: "lastModified",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/accepted",
-      currentPage: currentPage
+      basePath: "/cases/accepted"
     }) }}
 
   {# Render pagination if pagination data is available #}
