--- a/views/cases/_closed-partial.njk
+++ b/views/cases/_closed-partial.njk
@@ -21,8 +21,7 @@
       ],
       sortBy: "dateClosed",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/closed",
-      currentPage: currentPage
+      basePath: "/cases/closed"
     }) }}
 
   {# Render pagination if pagination data is available #}
