--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -21,8 +21,7 @@
       ],
       sortBy: "dateReceived",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/new",
-      currentPage: currentPage
+      basePath: "/cases/new"
     }) }}
 
   {# Render pagination if pagination data is available #}
