--- a/views/cases/_opened-partial.njk
+++ b/views/cases/_opened-partial.njk
@@ -21,8 +21,7 @@
       ],
       sortBy: "lastModified",
       sortOrder: sortOrder or "asc",
-      basePath: "/cases/opened",
-      currentPage: currentPage
+      basePath: "/cases/opened"
     }) }}
 
   {# Render pagination if pagination data is available #}
