Fixes sorting when navigating between pages

--- a/views/cases/_new-partial.njk
+++ b/views/cases/_new-partial.njk
@@ -28,6 +28,7 @@
   {% if pagination %}
     {{ paginationComponent({
       pagination: pagination,
+      sortOrder: sortOrder or "asc",
       basePath: "/cases/new"
     }) }}
   {% endif %}
