--- a/views/cases/client-details.njk
+++ b/views/cases/client-details.njk
@@ -2,6 +2,8 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/tag/macro.njk" import govukTag %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "components/tabComponent.njk" import tabComponent %}
+
 
 {% block backLink %}
   {{ govukBackLink({
@@ -23,4 +25,34 @@
   {% else %}
     {% include "cases/_opened-client-details-partial.njk" %}
   {% endif %}
+
+  {{ tabComponent({
+    activeTab: activeSubNavigationTab,
+    containerId: "cases-tab-container",
+    casesData: casesData,
+    sortOrder: sortOrder,
+    pagination: pagination,
+    tabs: [
+      {
+        id: "client_details",
+        text: "Client details",
+        href: "/cases/" + activeTab + "/" + caseReference + "/client-details"
+      },
+      {
+        id: "scope",
+        text: "Scope",
+        href: "/cases/" + activeTab + "/" + caseReference + "/scope"
+      },
+      {
+        id: "financial_eligibility",
+        text: "Financial eligibility",
+        href: "/cases/" + activeTab + "/" + caseReference + "/financial-eligibility"
+      },
+      {
+        id: "notes_and_history",
+        text: "Notes and history",
+        href:"/cases/" + activeTab + "/" + caseReference + "/notes-and-history"
+      }
+    ]
+  }) }}
 {% endblock %}
