--- a/views/cases/index.njk
+++ b/views/cases/index.njk
@@ -38,7 +38,7 @@
   {{ tabComponent({
     activeTab: activeTab,
     containerId: "cases-tab-container",
-    casesData: casesData,
+    data: data,
     sortOrder: sortOrder,
     pagination: pagination,
     tabs: [
