Updates url to cases

--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -26,23 +26,23 @@
       {
         id: "client_details",
         text: "Client details",
-        href: "/case/" + caseReference + "/client-details",
+        href: "/cases/" + caseReference + "/client-details",
         partial: "case_details/_client-details-partial.njk"
       },
       {
         id: "scope",
         text: "Scope",
-        href: "/case/" + caseReference + "/scope"
+        href: "/cases/" + caseReference + "/scope"
       },
       {
         id: "financial_eligibility",
         text: "Financial eligibility",
-        href: "/case/" + caseReference + "/financial-eligibility"
+        href: "/cases/" + caseReference + "/financial-eligibility"
       },
       {
         id: "notes_and_history",
         text: "Notes and history",
-        href:"/case/" + caseReference + "/notes-and-history"
+        href:"/cases/" + caseReference + "/notes-and-history"
       }
     ]
   }) }}
