--- a/views/cases/_closed-partial.njk
+++ b/views/cases/_closed-partial.njk
@@ -13,7 +13,7 @@
       id: "closed-cases-table",
       data: data,
       columns: [
-        { key: "fullName", text: "Name", link: "/case/{{caseReference}}/client-details" },
+        { key: "fullName", text: "Name", link: "/cases/{{caseReference}}/client-details" },
         { key: "caseReference", text: "Case ID" },
 				{ key: "dateOfBirth", text: "Date of birth" },
         { key: "refCode", text: "Details" },
