Case details heading size changed

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -50,7 +50,7 @@
   computedAddress: addressWithPostcode
 } %}
 
-<h2 class="govuk-heading-l">Client details</h2>
+<h2 class="govuk-heading-m">Client details</h2>
 {# Client info summary card #}
 {{ summaryCardComponent({
   data: constructedData,
