Adds View for edit name and errorSummaryComponet

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -102,7 +102,7 @@
       actions: {
         items: [
           {
-            href: "/",
+            href: "/cases/" + data.caseReference + "/client-details/edit/name",
             text: "Change",
             visuallyHiddenText: "Change Name"
           }
