If applied, this updates content as per UAT comments

--- a/views/case_details/edit-client-name.njk
+++ b/views/case_details/edit-client-name.njk
@@ -28,7 +28,7 @@
         <input type="hidden" name="existingFullName" value="{{ existingFullName | default(currentName) }}">
         {{ govukInput({
           label: {
-            text: "Client's full name",
+            text: "Client name",
             classes: "govuk-label--l",
             isPageHeading: true
           },
