If applied, this adds a way for the user change user email address

--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -180,7 +180,7 @@
       actions: {
         items: [
           {
-            href: "/",
+            href: "/cases/" + data.caseReference + "/client-details/edit/email-address",
             text: "Change",
             visuallyHiddenText: "Change Email"
           }
