--- a/views/case_details/edit-client-phone-number.njk
+++ b/views/case_details/edit-client-phone-number.njk
@@ -7,7 +7,6 @@
 {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-
 {% set backLinkHref = "/cases/" + caseReference + "/client-details" %}
 
 {% block backLink %}
@@ -22,17 +21,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       {% if error %}
-        {% if error.inputErrors.safeToCall %}
-          {% set safeToCallErrorMessage = {
-            text: error.inputErrors.safeToCall
-          } %}
-        {% endif %}
-        {% if error.inputErrors.phoneNumber %}
-          {% set phoneNumberErrorMessage = {
-            text: error.inputErrors.phoneNumber
-          } %}
-        {% endif %}
         {{ errorSummary(error.errorSummaryList) }}
+        {% set safeToCallErrorMessage = { text: error.inputErrors.safeToCall } if error.inputErrors.safeToCall %}
+        {% set phoneNumberErrorMessage = { text: error.inputErrors.phoneNumber } if error.inputErrors.phoneNumber %}
       {% endif %}
       <form method="post" action="/cases/{{ caseReference }}/client-details/edit/phone-number">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
