--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -192,7 +192,7 @@
       actions: {
         items: [
           {
-            href: "/",
+            href: "/cases/" + data.caseReference + "/client-details/edit/address",
             text: "Change",
             visuallyHiddenText: "Change Address"
           }
