--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -16,7 +16,7 @@
   {% endif %}
 
   <h1 class="govuk-heading-xl">Search for a case</h1>
-  <p>Enter details in at least one field to search </p>
+  <p>Enter case details to search for a case </p>
 
 
   <div class="moj-filter__selected">
